# heap-of-battle

./: .gitmodules  CMakeLists.txt  README.md
data/assets/music/: theme.flac
data/configuration/: configuration.json  main_menu.json  map1.json  map1_player.json
hob/: CMakeLists.txt
hob/common/: CMakeLists.txt
hob/common/include/: json_parser.hpp
hob/common/src/: json_parser.cpp  json_parser_impl.cpp  json_parser_impl.hpp
hob/game/: CMakeLists.txt
hob/game/src/: configuration.cpp  configuration.hpp  game.cpp  game.hpp  main.cpp
hob/main_menu/: CMakeLists.txt
hob/main_menu/src/: main_menu.cpp  main_menu.hpp
hob/map1/: CMakeLists.txt  animation.cpp  animation.hpp
hob/map1/src/: map1.cpp  map1.hpp  player.cpp  player.hpp
libs/engine/: CMakeLists.txt
libs/engine/include/: application.hpp  application_interface.hpp  asset_manager.hpp  scene.hpp
libs/engine/src/: application.cpp  application_impl.cpp  application_impl.hpp  asset_manager.cpp  asset_manager_impl.cpp  asset_manager_impl.hpp  scene.cpp
